# DSP-Cpp-filters

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  build-tests.sh
.circleci/: config.yml  run-locally.sh
.github/workflows/: build-and-test.yml
lib/: biquad.h  biquad_modified.h  filter_common.h  fo_apf.h  fo_hpf.h  fo_lpf.h  fo_shelving_high.h  fo_shelving_low.h  so_apf.h  so_bpf.h  so_bsf.h  so_butterworth_bpf.h  so_butterworth_bsf.h  so_butterworth_hpf.h  so_butterworth_lpf.h  so_hpf.h  so_linkwitz_riley_hpf.h  so_linkwitz_riley_lpf.h  so_lpf.h  so_parametric_cq_boost.h  so_parametric_cq_cut.h  so_parametric_ncq.h
src/: biquad_modified.h  filter_common.h  filter_includes.h  fo_apf.cpp  fo_apf.h  fo_hpf.cpp  fo_hpf.h  fo_lpf.cpp  fo_lpf.h  fo_shelving_high.cpp  fo_shelving_high.h  fo_shelving_low.cpp  fo_shelving_low.h  so_apf.cpp  so_apf.h  so_bpf.cpp  so_bpf.h  so_bsf.cpp  so_bsf.h  so_butterworth_bpf.cpp  so_butterworth_bpf.h  so_butterworth_bsf.cpp  so_butterworth_bsf.h  so_butterworth_hpf.cpp  so_butterworth_hpf.h  so_butterworth_lpf.cpp  so_butterworth_lpf.h  so_hpf.cpp  so_hpf.h  so_linkwitz_riley_hpf.cpp  so_linkwitz_riley_hpf.h  so_linkwitz_riley_lpf.cpp  so_linkwitz_riley_lpf.h  so_lpf.cpp  so_lpf.h  so_parametric_cq_boost.cpp  so_parametric_cq_boost.h  so_parametric_cq_cut.cpp  so_parametric_cq_cut.h  so_parametric_ncq.cpp  (+2 more)
tests/: CMakeLists.txt  fo_apf_test.cpp  fo_hpf_test.cpp  fo_lpf_test.cpp  fo_shelving_high_test.cpp  fo_shelving_low_test.cpp  so_apf_test.cpp  so_bpf_test.cpp  so_bsf_test.cpp  so_butterworth_bpf_test.cpp  so_butterworth_bsf_test.cpp  so_butterworth_hpf_test.cpp  so_butterworth_lpf_test.cpp  so_hpf_test.cpp  so_linkwitz_riley_hpf_test.cpp  so_linkwitz_riley_lpf_test.cpp  so_lpf_test.cpp  so_parametric_cq_boost_test.cpp  so_parametric_cq_cut_test.cpp  so_parametric_ncq_test.cpp  tests_common.h
